# blogging-code

./: .gitignore  README.md
blas-lapack-install/: README.md
blas-lapack-install/scripts/: build-run.sh  install-external-libraries.sh
blas-lapack-install/src/: cblas_example.cpp
blas-lapack/scripts/: build-run.sh  install-external-libraries.sh
blas-lapacke/: README.md
blas-lapacke/scripts/: build-run.sh  install-external-libraries.sh
blas-lapacke/src/: cblas_example.cpp  lapacke_example.cpp
cpp-basic-cpp-python-extension/: README.md
cpp-basic-cpp-python-extension/include/: matmul.h
cpp-basic-cpp-python-extension/scripts/: compile.sh
cpp-basic-cpp-python-extension/src/: bindings.cpp  main.cpp  matmul.cpp
cpp-basic-cpp-python-extension/tests/: test_matmul.py
cpp-compile-library/: README.md
cpp-compile-library/include/: matmul.h
cpp-compile-library/scripts/: compile.sh
cpp-compile-library/src/: main.cpp  matmul.cpp
cpp-compile-link-external-lib/: README.md  main.cpp
cpp-compile-link-external-lib/scripts/: compile-run.sh  download-img.sh
cpp-makefile/: Makefile  README.md
cpp-multiplefiles/: README.md
cuda-blur/: Makefile  README.md  pyproject.toml
cuda-matrix-multiplication/: README.md
cuda-performance/: README.md  analysis.py  requirements.txt  vector_add.cu  vector_add_types.cu
cuda-utils/: CMakeLists.txt  README.md
cuda-utils/src/: gpu_allocate.cu  gpu_info.cu
graphs-breadth-first-search/: README.md  bfs.py
graphs-depth-first-search/: README.md  dps.py
python-dockerfiles/: README.md  build-run.sh
(+54 files in other folders)
